--- a/ToyProjectManagementApp/Views/ProjectContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContent.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -107,9 +107,9 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JvD-SI-1wR">
                                         <rect key="frame" x="97.666666666666686" y="0.0" width="97.333333333333314" height="49"/>
-                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="gearshape.fill" catalog="system"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="list"/>
                                         <connections>
                                             <action selector="showSideBar:" destination="gsB-19-J9G" eventType="touchUpInside" id="VHp-5y-bRj"/>
                                         </connections>
@@ -135,7 +135,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Rb-YF-Pf6">
-                                <rect key="frame" x="0.0" y="230" width="390" height="517"/>
+                                <rect key="frame" x="0.0" y="230" width="390" height="526"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <sections/>
                                 <connections>
@@ -151,7 +151,7 @@
                             <constraint firstItem="mZa-L5-meA" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" id="3fT-lK-PNc"/>
                             <constraint firstItem="2EP-nu-2wm" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" constant="14" id="A1n-lh-GCz"/>
                             <constraint firstItem="0Rb-YF-Pf6" firstAttribute="leading" secondItem="JE4-Nm-gh3" secondAttribute="leading" id="COY-y4-JLK"/>
-                            <constraint firstItem="8cM-Lj-T8c" firstAttribute="top" secondItem="0Rb-YF-Pf6" secondAttribute="bottom" constant="14" id="D1k-FL-tKl"/>
+                            <constraint firstItem="8cM-Lj-T8c" firstAttribute="top" secondItem="0Rb-YF-Pf6" secondAttribute="bottom" constant="5" id="D1k-FL-tKl"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="0Rb-YF-Pf6" secondAttribute="trailing" id="F03-aQ-ylj"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="mZa-L5-meA" secondAttribute="trailing" id="Fde-LO-8Pc"/>
                             <constraint firstItem="JE4-Nm-gh3" firstAttribute="trailing" secondItem="8cM-Lj-T8c" secondAttribute="trailing" id="OJV-nA-lcb"/>
@@ -196,7 +196,7 @@
         <image name="arrowshape.left.fill" catalog="system" width="128" height="104"/>
         <image name="arrowshape.right.fill" catalog="system" width="128" height="104"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
-        <image name="gearshape.fill" catalog="system" width="128" height="123"/>
+        <image name="list" width="35" height="35"/>
         <image name="rainbowCircle" width="35" height="35"/>
         <namedColor name="primaryColor">
             <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
